Changed text on website

--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
 			HIYA.
 		</h1>
 		<p id="header">
-			my name is kate. i'm a developer who loves
-			<br>
-			coffee, coding, books, and pugs.  
+			my name is kate. i'm a developer who loves coffee, 
+			<br> 
+			coding, and creating new things.  
 		</p>
 	</header>
+	
 	
 	<section id="section-a">
 		[  NOW AVAILABLE FOR HIRE ]
 	</section>
-
+<div class="backgroundimg">
 	<section id="section-b">
 	<p id="background">BACKGROUND</p>
-	<p id="backgroundtext">I started my professional career in the pharmaceutical and medical device industry. After 6 years in both clinical and corporate roles, I couldn't help but feel there was a new path out there waiting for me. 
-
+	<p id="backgroundtext">I started my professional career in the pharmaceutical and medical device industry. After 6 years in both clinical-focused and corporate roles, I couldn't help but feel there was a new path out there waiting for me. 
+	<br>
 	After a few years of taking classes and trying out new things, I decided to pursue an education in front-end web development. 
 	</p>
 	</section> 
@@ -49,9 +50,9 @@
 <section id="section-d">
 	<p id="skills">SKILLS</p>
 	<p id="skillstext">
-		HTML 5, CSS, Bootstrap 3.3.7+, Javascript, Node JS, JQuery
+		HTML 5, CSS, Bootstrap 3.3.7+, Javascript, Node JS, JQuery, Git
 		<br>
-		Tem building, communication, project management
+		Team building, communication, project management
 	</p>
 	</section> 
 
@@ -63,7 +64,7 @@
 	<br>
 	Corporate work in pharmaceuticals and medical devices, 2012-2018
 	<br>
-	Clinical work, CPhT, 2009-2011
+	Clinical-support work, CPhT, 2009-2011
 	</p>
 	</section> 
 
@@ -80,7 +81,7 @@
 	<a href="mailto:kateryanko@gmail.com"><i class="fas fa-envelope-square"></i></a>  e-mail me
 	</p>
 	</section> 
-
+</div>
 
 
 
