Changed bio and header

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 			HIYA.
 		</h1>
 		<p id="header">
-			my name is kate. i'm a developer who loves coffee, 
+			my name is kate. 
+			<br>
+			i'm a consultant and developer
+			<br>
+			who loves coffee, 
 			<br> 
-			coding, and creating new things.  
+			writing, and creating new things.  
 		</p>
 	</header>
 	
@@ -31,9 +35,7 @@
 <div class="backgroundimg">
 	<section id="section-b">
 	<p id="background">BACKGROUND</p>
-	<p id="backgroundtext">I started my professional career in the pharmaceutical and medical device industry. After 6 years in both clinical-focused and corporate roles, I couldn't help but feel there was a new path out there waiting for me. 
-	<br>
-	After a few years of taking classes and trying out new things, I decided to pursue an education in front-end web development. 
+	<p id="backgroundtext">I started my professional career in the pharmaceutical and medical device industry. After 6 years in both clinical-focused and corporate roles, I decided to start my own creative consulting business while pursuing an education in web development. 
 	</p>
 	</section> 
 
@@ -42,7 +44,7 @@
 	<p id="educationtext">
 			Graduate of The Ohio State University, 2013
 			<br>
-			Graduate of Colt Steele's The Web Developer Bootcamp, 2018
+			Graduate of Colt Steele's 'The Web Developer Bootcamp', 2018
 		</ul>
 	</p>
 	</section> 
