changed portfolio to include new udemy classes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<p id="header">
 			my name is kate. 
 			<br>
-			i'm a consultant and developer
+			i'm a consultant and digital marketer
 			<br>
 			who loves coffee, 
 			<br> 
@@ -35,7 +35,7 @@
 <div class="backgroundimg">
 	<section id="section-b">
 	<p id="background">BACKGROUND</p>
-	<p id="backgroundtext">I started my professional career in the pharmaceutical and medical device industry. After 6 years in both clinical-focused and corporate roles, I decided to start my own creative consulting business while pursuing an education in web development. 
+	<p id="backgroundtext">I started my professional career in the pharmaceutical and medical device industry. After 6 years in both clinical-focused and corporate roles, with a focus on product marketing, I decided to start my own consulting business, so I could help business owners and professionals achieve their marketing goals. 
 	</p>
 	</section> 
 
@@ -44,7 +44,7 @@
 	<p id="educationtext">
 			Graduate of The Ohio State University, 2013
 			<br>
-			Graduate of Colt Steele's 'The Web Developer Bootcamp', 2018
+			Graduate of 'User Experience Design: Complete UX Fundamentals Course', 2018
 		</ul>
 	</p>
 	</section> 
@@ -52,35 +52,41 @@
 <section id="section-d">
 	<p id="skills">SKILLS</p>
 	<p id="skillstext">
-		HTML 5, CSS, Bootstrap 3.3.7+, Javascript, Node JS, JQuery, Git
+		<i>Digital marketing skills:</i> 
 		<br>
-		Team building, communication, project management
+		Marketing analytics, generating web and marketing content, assisting designers with the creation of marketing campaigns.
+		<br><br>
+		<i>Tech skills:</i>
+		<br>
+		Fundamental knowledge of front-end web development, design, and deployment, such as: HTML 5, CSS, Bootstrap 3.3.7+, Javascript, and Git.
+		<br><br>
+		<i>Soft skills: </i>
+		<br>
+		Team building, communication, and project management.
 	</p>
 	</section> 
 
-	<section id="section-e">
+	<!-- <section id="section-e">
 	<p id="experience">EXPERIENCE</p>
 	<p id="experiencetext">
 
 	Freelancing, March 2018-present 
 	<br>
-	Corporate work in pharmaceuticals and medical devices, 2012-2018
+	3+ years of dedicated marketing experience
 	<br>
 	Clinical-support work, CPhT, 2009-2011
 	</p>
-	</section> 
+	</section>  -->
 
 <section id="section-f">
 	<p id="contact">CONTACT</p>
 	<p id="contacttext">
 
-	<a href="https://www.linkedin.com/in/kateyanko/"><i class="fab fa-linkedin"></i></a>  linkedin
+	<a href="https://www.linkedin.com/in/kateyanko/"><i class="fab fa-linkedin"></i>linkedin</a>  
 	<br>
-	<a href="https://github.com/kateyanko"><i class="fab fa-github-square"></i></a>  github
+	<a href="https://github.com/kateyanko"><i class="fab fa-github-square"></i>github</a>  
 	<br>
-	<a href="https://codepen.io/kateyanko/"><i class="fab fa-codepen"></i></a>  codepen
-	<br>
-	<a href="mailto:kateryanko@gmail.com"><i class="fas fa-envelope-square"></i></a>  e-mail me
+	<a href="mailto:kateryanko@gmail.com"><i class="fas fa-envelope-square"></i>e-mail me</a>  
 	</p>
 	</section> 
 </div>
